--- a/index.html
+++ b/index.html
@@ -1,95 +1,150 @@
 <!DOCTYPE html>
 <html ng-app="Dashboard">
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>FRC Dashboard</title>
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.8.4/nv.d3.css">
-  <script src="bower_components/angular/angular.min.js"></script>
-  <script src="bower_components/angular-animate/angular-animate.min.js"></script>
-  <script src="bower_components/angular-aria/angular-aria.min.js"></script>
-  <script src="bower_components/angular-material/angular-material.min.js"></script>
-  <script src="bower_components/angular-messages/angular-messages.min.js"></script>
-  <script src="bower_components/angular-touch/angular-touch.min.js"></script>
-  <script src="bower_components/d3/d3.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.8.4/nv.d3.js"></script>
-  <script src="bower_components/angular-nvd3/dist/angular-nvd3.js"></script>
-  <script src="/networktables/networktables.js"></script>
-  <script src="ui.js"></script>
-</head>
-
-<div ng-controller="uiCtrl" class="background" layout="column" layout-fill flex="grow"> <!-- -->
-  <div class="box" ng-controller="clockCtrl" layout="row" layout-align="space-between center" flex="10">
-    <div class="clockText" flex>Robot Status: <span class="value">{{getStatus()}}</span></div>
-    <div class="clockText"flex>Match Time: <span class="value">{{getTime()}}</span></div>
-  </div>
-  <div layout="row" flex="grow"> <!--container for the rest of the UI -->
-    <div layout="column" flex="40">
-      <div layout="column" class="box" flex="65"> <!--CAmera -->
-        <p class="title">Camera Feed</p>
+   <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width">
+      <title>FRC Dashboard</title>
+      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.8.4/nv.d3.css">
+      <script src="bower_components/angular/angular.min.js"></script>
+      <script src="bower_components/angular-animate/angular-animate.min.js"></script>
+      <script src="bower_components/angular-aria/angular-aria.min.js"></script>
+      <script src="bower_components/angular-material/angular-material.min.js"></script>
+      <script src="bower_components/angular-messages/angular-messages.min.js"></script>
+      <script src="bower_components/angular-touch/angular-touch.min.js"></script>
+      <script src="bower_components/d3/d3.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.8.4/nv.d3.js"></script>
+      <script src="bower_components/angular-nvd3/dist/angular-nvd3.js"></script>
+      <script src="/networktables/networktables.js"></script>
+      <script src="ui.js"></script>
+   </head>
+   <div ng-controller="uiCtrl" class="background" layout="column" layout-fill flex="grow">
+      <div class="box" ng-controller="clockCtrl" layout="row" layout-align="space-between center" flex="10"> <!-- Status and Time -->
+         <div class="clockText" flex>Robot Status: <span class="value">{{getStatus()}}</span></div>
+         <div class="clockText"flex>Match Time: <span class="value">{{getTime()}}</span></div>
       </div>
-      <div layout="column" class="box" flex="35"> <!--Autonomous -->
-        <p class="title">Autonomous</p>
-        <div ng-controller="autoCtrl" layout="column" class="box" flex="grow">
-        <div layout="row" flex="grow">
-          <div flex = "30">
-          <svg width="170" height="246" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid meet">
-           <g>
-            <title>background</title>
-            <rect x="-1" y="-1" width="300" height="300" id="canvas_background" fill="none"/>
-           </g>
-           <g>
-            <title>Layer 1</title>
-            <line transform="rotate(-90 36.325210571289084,78.46385192871095) " id="svg_7" x1="15.325425" y1="99.464119" x2="57.325425" y2="57.464119" stroke="#cccc00" stroke-width="2"/>
-            <line transform="rotate(-180 36.2637939453125,180.0041046142578) " id="svg_8" x1="15.263889" y1="201.00258" x2="57.263889" y2="159.00258" stroke="#cccc00" stroke-width="2"/>
-            <line transform="rotate(90 57.37038421630857,128.78552246093753) " id="svg_9" x1="27.170477" y1="128.785624" x2="87.570478" y2="128.785624" stroke="#cccc00" stroke-width="2"/>
-            <line transform="rotate(90 63.14546966552732,128.78552246093753) " id="svg_10" x1="63.145472" y1="123.785622" x2="63.145472" y2="133.785622" stroke="#cccc00" stroke-width="2"/>
-            <line id="svg_11" x1="46.575439" y1="67.589102" x2="36.575439" y2="77.589102" stroke="#cccc00" stroke-width="2"/>
-            <line id="svg_12" x1="36.638881" y1="180.377551" x2="46.638881" y2="190.377551" stroke="#cccc00" stroke-width="2"/>
-            <line transform="rotate(90 114.29563903808592,128.89724731445315) " id="svg_13" x1="114.295756" y1="166.397351" x2="114.295756" y2="91.397351" stroke="#cccc00" stroke-width="2"/>
-            <line id="svg_18" x1="50.408634" y1="63.857908" x2="100.408634" y2="13.857908" stroke="#cccc00" stroke-width="2"/>
-            <line transform="rotate(-90 75.3589553833008,218.89373779296875) " id="svg_19" x1="50.35904" y1="243.890965" x2="100.35904" y2="193.890965" stroke="#cccc00" stroke-width="2"/>
-            <line transform="rotate(90 124.94737243652344,14.250114440917978) " id="svg_20" x1="124.947465" y1="39.250307" x2="124.947465" y2="-10.749693" stroke="#cccc00" stroke-width="2"/>
-            <line transform="rotate(90 124.72465515136717,243.65252685546878) " id="svg_21" x1="124.724748" y1="268.648958" x2="124.724748" y2="218.648958" stroke="#cccc00" stroke-width="2"/>
-           </g>
-          </svg>
-        </div>
-          <div flex = "30">
-            <md-button class="md-raised md-primary touchButton autoSelector" ng-class="{buttonSelected: info.selected == 'right'}" ng-mouseenter="select('right')">right gear</md-button>
-            <br>
-            <md-button class="md-raised md-primary touchButton autoSelector" ng-class="{buttonSelected: info.selected == 'center'}" ng-mouseenter="select('center')">center gear</md-button>
-            <br>
-            <md-button class="md-raised md-primary touchButton autoSelector" ng-class="{buttonSelected: info.selected == 'left'}" ng-mouseenter="select('left')">left gear</md-button>
-          </div>
-          <div flex = "30">
-            <md-button class="md-raised md-primary touchButton autoSelector" ng-class="{buttonSelected: info.selected == 'ball'}" ng-mouseenter="select('ball')">ball shooter</md-button>
-            <svg height="180" width="200">
-              <circle cx="110" cy="90" r="80" stroke="black" stroke-width="0" fill="#cccc00" />
-            </svg>
-          </div>
-        </div>
-</div>
+      <div layout="row" flex="grow"> <!--container for the rest of the UI -->
+         <div layout="column" flex="40"> <!-- Contains Camera and Auto Selector -->
+            <div layout="column" class="box" flex="65"> <!--Camera -->
+               <p class="title">Camera Feed</p>
+            </div>
+            <div layout="column" class="box" flex="35"> <!--Autonomous -->
+               <p class="title">Autonomous</p>
+               <div ng-controller="autoCtrl" layout="column" class="box" flex="grow">
+                  <div layout="row" flex="grow">
+                     <div flex = "grow" layout-align="center center">
+                        <svg width="180" height="245" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid meet" viewBox="0 0 180 250">
+                           <g>
+                              <title>Layer 1</title>
+                              <line transform="rotate(-90 36.325210571289084,78.46385192871095) " id="svg_7" x1="15.325425" y1="99.464119" x2="57.325425" y2="57.464119" stroke="#cccc00" stroke-width="2"/>
+                              <line transform="rotate(-180 36.2637939453125,180.0041046142578) " id="svg_8" x1="15.263889" y1="201.00258" x2="57.263889" y2="159.00258" stroke="#cccc00" stroke-width="2"/>
+                              <line transform="rotate(90 57.37038421630857,128.78552246093753) " id="svg_9" x1="27.170477" y1="128.785624" x2="87.570478" y2="128.785624" stroke="#cccc00" stroke-width="2"/>
+                              <line transform="rotate(90 63.14546966552732,128.78552246093753) " id="svg_10" x1="63.145472" y1="123.785622" x2="63.145472" y2="133.785622" stroke="#cccc00" stroke-width="2"/>
+                              <line id="svg_11" x1="46.575439" y1="67.589102" x2="36.575439" y2="77.589102" stroke="#cccc00" stroke-width="2"/>
+                              <line id="svg_12" x1="36.638881" y1="180.377551" x2="46.638881" y2="190.377551" stroke="#cccc00" stroke-width="2"/>
+                              <line transform="rotate(90 114.29563903808592,128.89724731445315) " id="svg_13" x1="114.295756" y1="166.397351" x2="114.295756" y2="91.397351" stroke="#cccc00" stroke-width="2"/>
+                              <line id="svg_18" x1="50.408634" y1="63.857908" x2="100.408634" y2="13.857908" stroke="#cccc00" stroke-width="2"/>
+                              <line transform="rotate(-90 75.3589553833008,218.89373779296875) " id="svg_19" x1="50.35904" y1="243.890965" x2="100.35904" y2="193.890965" stroke="#cccc00" stroke-width="2"/>
+                              <line transform="rotate(90 124.94737243652344,14.250114440917978) " id="svg_20" x1="124.947465" y1="39.250307" x2="124.947465" y2="-10.749693" stroke="#cccc00" stroke-width="2"/>
+                              <line transform="rotate(90 124.72465515136717,243.65252685546878) " id="svg_21" x1="124.724748" y1="268.648958" x2="124.724748" y2="218.648958" stroke="#cccc00" stroke-width="2"/>
+                           </g>
+                        </svg>
+                     </div>
+                     <div flex = "grow" layout-align="center center">
+                        <md-button class="md-raised md-primary touchButton autoSelector" ng-class="{buttonSelected: info.selected == 'right'}" ng-mouseenter="select('right')">right gear</md-button>
+                        <br>
+                        <md-button class="md-raised md-primary touchButton autoSelector" ng-class="{buttonSelected: info.selected == 'center'}" ng-mouseenter="select('center')">center gear</md-button>
+                        <br>
+                        <md-button class="md-raised md-primary touchButton autoSelector" ng-class="{buttonSelected: info.selected == 'left'}" ng-mouseenter="select('left')">left gear</md-button>
+                     </div>
+                     <div flex = "grow" layout-align="center center">
+                        <md-button class="md-raised md-primary touchButton autoSelector" ng-class="{buttonSelected: info.selected == 'ball'}" ng-mouseenter="select('ball')">ball shooter</md-button>
+                        <svg height="180" width="200" viewBox="0 0 180 200" preserveAspectRatio="xMidYMid meet">
+                           <circle cx="110" cy="90" r="80" stroke="black" stroke-width="0" fill="#cccc00" />
+                        </svg>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <div layout="column" flex="20"> <!-- Contains Gyro and Motor -->
+           <div layout="column" class="box" flex="40"> <!-- Gyro -->
+           </div>
+            <div layout="column" class="box" flex="60" layout-align="start center"> <!-- Motors -->
+             <p class="title">Motors</p>
+             <svg width="204" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid meet" viewBox="0 0 204 225">
+              <g>
+               <title>background</title>
+               <rect fill="none" id="canvas_background" height="227" width="206" y="-1" x="-1"/>
+              </g>
+              <g>
+               <title>Layer 1</title>
+               <rect fill="#000000" fill-opacity="0" stroke-width=" 2px" height="220" width="200" id="noPurple1" stroke="#ffffff" y="1.428602" x="1.02044"/>
+               <g id="e390_group">
+                <rect fill="none" stroke-width=" 2px" height="50" width="30" id="e41_rectangle" stroke="#CCCC00" y="161.428602" x="6.02044"/>
+                <line stroke-width=" 2px" stroke="#CCCC00" y2="161.428602" x2="36.02044" y1="181.428602" x1="6.02044" id="e231_line"/>
+                <line stroke-width=" 2px" stroke="#CCCC00" y2="171.428602" x2="36.02044" y1="191.428602" x1="6.02044" id="e271_line"/>
+                <line stroke-width=" 2px" stroke="#CCCC00" y2="181.428602" x2="36.02044" y1="201.428602" x1="6.02044" id="e285_line"/>
+                <line stroke-width=" 2px" stroke="#CCCC00" y2="191.428602" x2="36.02044" y1="211.428602" x1="6.02044" id="e299_line"/>
+                <line stroke-width=" 2px" stroke="#CCCC00" y2="161.428602" x2="21.02044" y1="171.428602" x1="6.02044" id="e352_line"/>
+                <line stroke-width=" 2px" stroke="#CCCC00" y2="211.428602" x2="21.02044" y1="201.428602" x1="36.02044" id="e366_line"/>
+               </g>
+               <line stroke-width=" 2px" stroke="white" y2="221.428602" x2="41.02044" y1="1.428602" x1="41.02044" id="noPurple2"/>
+               <g id="e415_group">
+                <rect fill="none" stroke-width=" 2px" height="50" width="30" id="e415_rectangle" stroke="#CCCC00" y="11.428602" x="6.02044"/>
+                <line fill="none" stroke-width=" 2px" stroke="#CCCC00" y2="31.428602" x2="36.02044" y1="11.428602" x1="6.02044" id="e415_line"/>
+                <line fill="none" stroke-width=" 2px" stroke="#CCCC00" y2="41.428602" x2="36.02044" y1="21.428602" x1="6.02044" id="e416_line"/>
+                <line fill="none" stroke-width=" 2px" stroke="#CCCC00" y2="51.428602" x2="36.02044" y1="31.428602" x1="6.02044" id="e417_line"/>
+                <line fill="none" stroke-width=" 2px" stroke="#CCCC00" y2="61.428602" x2="36.02044" y1="41.428602" x1="6.02044" id="e418_line"/>
+                <line fill="none" stroke-width=" 2px" stroke="#CCCC00" y2="11.428602" x2="21.02044" y1="21.428602" x1="36.02044" id="e419_line"/>
+                <line fill="none" stroke-width=" 2px" stroke="#CCCC00" y2="61.428602" x2="21.02044" y1="51.428602" x1="6.02044" id="e420_line"/>
+               </g>
+               <g id="e610_group">
+                <rect fill="#000000" fill-opacity="0" stroke-width=" 2px" height="50" width="30" id="e610_rectangle" stroke="#CCCC00" y="161.428602" x="166.02044"/>
+                <line stroke-width=" 2px" stroke="#CCCC00" y2="181.428602" x2="196.02044" y1="161.428602" x1="166.02044" id="e610_line"/>
+                <line stroke-width=" 2px" stroke="#CCCC00" y2="191.428602" x2="196.02044" y1="171.428602" x1="166.02044" id="e611_line"/>
+                <line stroke-width=" 2px" stroke="#CCCC00" y2="201.428602" x2="196.02044" y1="181.428602" x1="166.02044" id="e612_line"/>
+                <line stroke-width=" 2px" stroke="#CCCC00" y2="211.428602" x2="196.02044" y1="191.428602" x1="166.02044" id="e613_line"/>
+                <line stroke-width=" 2px" stroke="#CCCC00" y2="161.428602" x2="181.02044" y1="171.428602" x1="196.02044" id="e614_line"/>
+                <line stroke-width=" 2px" stroke="#CCCC00" y2="211.428602" x2="181.02044" y1="201.428602" x1="166.02044" id="e615_line"/>
+               </g>
+               <g stroke="#CCCC00" id="e615_group">
+                <rect fill="#000000" fill-opacity="0" stroke-width=" 2px" height="50" width="30" id="e615_rectangle" stroke="#CCCC00" y="11.428602" x="166.02044"/>
+                <line stroke-width=" 2px" stroke="#CCCC00" y2="11.428602" x2="196.02044" y1="31.428602" x1="166.02044" id="e616_line"/>
+                <line stroke-width=" 2px" stroke="#CCCC00" y2="21.428602" x2="196.02044" y1="41.428602" x1="166.02044" id="e617_line"/>
+                <line stroke-width=" 2px" stroke="#CCCC00" y2="31.428602" x2="196.02044" y1="51.428602" x1="166.02044" id="e618_line"/>
+                <line stroke-width=" 2px" stroke="#CCCC00" y2="41.428602" x2="196.02044" y1="61.428602" x1="166.02044" id="e619_line"/>
+                <line stroke-width=" 2px" stroke="#CCCC00" y2="11.428602" x2="181.02044" y1="21.428602" x1="166.02044" id="e620_line"/>
+                <line stroke-width=" 2px" stroke="#CCCC00" y2="61.428602" x2="181.02044" y1="51.428602" x1="196.02044" id="e621_line"/>
+               </g>
+               <line stroke-width=" 2px" stroke="white" y2="221.428602" x2="161.02044" y1="1.428602" x1="161.02044" id="noPurple3"/>
+               <line stroke-width=" 2px" stroke="white" y2="41.428602" x2="161.02044" y1="41.428602" x1="41.02044" id="noPurple4"/>
+               <line stroke-width=" 2px" stroke="white" y2="11.428602" x2="51.02044" y1="41.428602" x1="51.02044" id="noPurple5"/>
+               <line stroke-width=" 2px" stroke="white" y2="11.428602" x2="81.02044" y1="11.428602" x1="51.02044" id="noPurple6"/>
+               <line stroke-width=" 2px" stroke="white" y2="11.428602" x2="151.02044" y1="41.428602" x1="151.02044" id="noPurple7"/>
+               <line stroke-width=" 2px" stroke="white" y2="11.428602" x2="121.02044" y1="11.428602" x1="151.02044" id="noPurple8"/>
+               <rect fill="#000000" fill-opacity="0" stroke-width=" 2px" height="30" width="60" id="e2265_rectangle" stroke="#CCCC00" y="181.428602" x="71.02044"/>
+               <rect fill="#000000" fill-opacity="0" stroke-width=" 2px" height="50" width="5" id="noPurple9" stroke="white" y="161.428602" x="61.02044"/>
+               <rect fill="#000000" fill-opacity="0" stroke-width=" 2px" height="50" width="5" id="noPurple10" stroke="white" y="161.428602" x="136.02044"/>
+               <line stroke-width=" 2px" stroke="white" y2="196.428602" x2="71.02044" y1="196.428602" x1="66.02044" id="noPurple12"/>
+               <line stroke-width=" 2px" stroke="white" y2="196.428602" x2="136.02044" y1="196.428602" x1="131.02044" id="noPurple11"/>
+              </g>
+             </svg>
+               </div>
+            </div>
+         </div>
       </div>
-    </div>
-    <div layout="column" flex="60">
-      <div layout="column" class="box" flex="grow">
-      </div>
-    </div>
-  </div>
-</div>
-<script>
-  document.addEventListener("keydown", function (e) {
-    if (e.which === 123) {
-      require('remote').getCurrentWindow().toggleDevTools();
-    } else if (e.which === 116) {
-      location.reload();
-    }
-  });
-</script>
-</body>
-
+   </div>
+   <script>
+      document.addEventListener("keydown", function (e) {
+        if (e.which === 123) {
+          require('remote').getCurrentWindow().toggleDevTools();
+        } else if (e.which === 116) {
+          location.reload();
+        }
+      });
+   </script>
+   </body>
 </html>
