Added some things

--- a/src/index.html
+++ b/src/index.html
@@ -20,29 +20,29 @@
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Cameras<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html#">Cameras<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Values</a>
+        <a class="nav-link" href="values.html#">Values</a>
       </li>		
     </ul>
   </div>
 </nav>
-<div class="container-flex text-center">
+<div class="container-flex no-gutters text-center widthHundred">
+  <div class="row text-center robotValues">
+    <div class="col">
+	<div id="timer">0:00</div>
+    </div>
+    <div class="col">
+	<div id="robotState">Disconnected</div>
+    </div>
+  </div>
   <div class="row">
     <div class="col" id="camera">
     </div>
     <div class="col" id="camera1">
     </div>
     <div class="col" id="camera2">
-    </div>
-  </div>
-  <div class="row text-center">
-    <div class="col">
-	<div id="timer"> 10:00 </div>
-    </div>
-    <div class="col">
-	<div id="robotState"> 10:00 </div>
     </div>
   </div>
 </div>
