--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="values.html#">Values</a>
-      </li>		
+      </li>
     </ul>
   </div>
 </nav>
@@ -34,7 +34,7 @@
 	<div id="timer">0:00</div>
     </div>
     <div class="col">
-	<div id="robotState">Disconnected</div>
+	<div id="robot-state">Disconnected</div>
     </div>
   </div>
   <div class="row">
