--- a/src/values.html
+++ b/src/values.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <meta charset="utf-8">
     <title>FRC Dashboard</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -9,38 +8,99 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-</head>
-
-<body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Dashboard</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="index.html#">Cameras<span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="values.html#">Values</a>
-      </li>		
-    </ul>
-  </div>
-</nav>
-<div class="container text-center">
-  <div class="row">
-    <div class="col" id="camera">
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">Dashboard</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html#">Cameras<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="values.html#">Values</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class="container">
+      <div class="row">
+        <div class="col valueBackground2">
+          Val 1
+        </div>
+        <div class="col valueBackground">
+          Val 1
+        </div>
+        <div class="col valueBackground2">
+          Val 1
+        </div>
+        <div class="col valueBackground">
+          Val 1
+        </div>
+        <div class="col valueBackground2">
+          Val 1
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="col valueBackground">
+          Val 1
+        </div>
+        <div class="col valueBackground2">
+          Val 1
+        </div>
+        <div class="col valueBackground">
+          Val 1
+        </div>
+        <div class="col valueBackground2">
+          Val 1
+        </div>
+        <div class="col valueBackground">
+          Val 1
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="col valueBackground2">
+          Val 1
+        </div>
+        <div class="col valueBackground">
+          Val 1
+        </div>
+        <div class="col valueBackground2">
+          Val 1
+        </div>
+        <div class="col valueBackground">
+          Val 1
+        </div>
+        <div class="col valueBackground2">
+          Val 1
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="col valueBackground">
+          Val 1
+        </div>
+        <div class="col valueBackground2">
+          Val 1
+        </div>
+        <div class="col valueBackground">
+          Val 1
+        </div>
+        <div class="col valueBackground2">
+          Val 1
+        </div>
+        <div class="col valueBackground">
+          Val 1
+        </div>
+      </div>
     </div>
-    <div class="col" id="camera1">
-    </div>
-    <div class="col">
-    </div>
-  </div>
-</div>
     <script src="networktables/networktables.js"></script>
     <script src="connection.js"></script>
     <script src="ui.js"></script>
-</body>
-
+  </body>
 </html>
