--- a/src/index.html
+++ b/src/index.html
@@ -36,13 +36,17 @@
     <div class="col">
 	<div id="robot-state">Disconnected</div>
     </div>
+    <div class="col">
+        <div id="login">
+            <input id="connect-address" type="text" value="localhost" disabled>
+            <button id="connect" disabled>Connecting</button>
+        </div>
+    </div>
   </div>
   <div class="row">
     <div class="col" id="camera">
     </div>
     <div class="col" id="camera1">
-    </div>
-    <div class="col" id="camera2">
     </div>
   </div>
 </div>
